--- a/Client/BrzoDoLokacije/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navHome"
-        android:title="Home"
+        android:id="@+id/navHomePage"
+        android:title="Početna strana"
         android:icon="@drawable/ic_nav_home"/>
     <item
+        android:id="@+id/navAllPosts"
+        android:icon="@drawable/ic_baseline_list_24"
+        android:title="Sve objave" />
+    <item
         android:id="@+id/navBrowse"
-        android:title="Browse"
+        android:title="Pretraga"
         android:icon="@drawable/ic_nav_browse"/>
     <item
         android:id="@+id/navAddPost"
-        android:title="Post"
+        android:title="Dodaj"
         android:icon="@drawable/ic_nav_addpost"/>
     <item
         android:id="@+id/navProfile"
-        android:title="Profile"
+        android:title="Profil"
         android:icon="@drawable/ic_nav_profile"/>
 </menu>
